<resources>
    <string name="app_name">HSP</string>
    <string name="share_button_desc">ShareButton</string>
    <string name="photo_button_desc">PhotoButton</string>
    <string name="note_button_desc">NoteButton</string>
    <string name="alarm_button_desc">AlarmButton</string>
    <string name="location_button_desc">LocationButton</string>
    <string name="star_button_desc">StarButton</string>
    <string name="note_placeholder">Enter your note here</string>
    <string name="remove_pin_text">Are you sure you want to remove the pin?</string>
    <string name="parking_show_tag">Show</string>
    <string name="parking_hide_tag">Hide</string>
    <string name="delete_title">Delete</string>
    <string name="delete_history_text">Are you sure you want to delete all?\nStarred locations will remain</string>
    <string name="reset_title">Reset</string>
    <string name="reset_settings_text">Are you sure you want to reset to default settings?</string>
    <string name="pref_locationId">locationId</string>
    <string name="pref_smart">smart</string>
    <string name="pref_speed">speed</string>
    <string name="pref_directDistance">directDistance</string>
    <string name="pref_sampleData">sampleData</string>
    <string name="pref_detectParking">detectParking</string>
    <string name="in_vehicle">In vehicle</string>
    <string name="on_bicycle">On bicycle</string>
    <string name="still">Still</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="widget_button_desc">WidgetButton</string>
    <string name="help_item_image_desc">HelpItemImage</string>
</resources>
